--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "billapp-backend",
   "version": "1.0.0",
   "description": "backend app for billapp",
-  "main": "server.js",
+  "main": "index.js",
   "author": "techer jean sebastien <techerjeansebastien.pro@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test sequelize-cli db:migrate && jest test -i tests/user.test.js --watch",
-    "run:dev": "NODE_ENV=development sequelize-cli db:migrate && node server.js",
+    "run:dev": "NODE_ENV=development sequelize-cli db:migrate && node index.js",
     "lint": "eslint ./"
   },
   "dependencies": {
@@ -37,5 +37,8 @@
     "setupFilesAfterEnv": [
       "./setupTests.js"
     ]
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
