--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "billapp-backend",
   "version": "1.0.0",
   "description": "backend app for billapp",
-  "main": "server.js",
+  "main": "index.js",
   "author": "techer jean sebastien <techerjeansebastien.pro@gmail.com>",
   "license": "MIT",
   "scripts": {
